--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,28 @@
-#____________________________________
-#  1. cache, build, db sqlite3 files
-#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-__pycache__/
-*.class
-*.pyc
-*.txt
-*.sqlite3
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 #____________________________________
-#  2. PyInstaller Distribution
+#  1. dependencies & build
 #^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-dist/
+/node_modules
+/.pnp
+.pnp.js
+/build
 
 #____________________________________
-#  3. Temporary exec files for TEST
+#  2. testing
 #^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-_.html
-_.pdb
+/coverage
+
+
+#____________________________________
+#  3. Temporary & misc
+#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
